[project]
name = "llm-memory-lab"
version = "0.1.0"
description = "A test harness for long-horizon LLM memory management strategies"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Your Name", email="you@example.com" }
]
license = { text = "MIT" }

dependencies = [
  "numpy",
  "requests",
  "psutil",
  "dataclasses-json",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
